# ksa_vat_report

./: .gitignore  MANIFEST.in  README.md  license.txt  pyproject.toml  setup.py
ksa_vat_report/: hooks.py  install.py  jinja.py  modules.txt  patches.txt
ksa_vat_report/ksa_vat_report/fixtures/: Role.json
ksa_vat_report/ksa_vat_report/report/ksa_vat_201/: ksa_vat_201.json  ksa_vat_201.py
