[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ksa_vat_report"
authors = [{ name = "Rafid Technology", email = "hasanm@rafidtech.com" }]
description = "KSA VAT 201 Report for ERPNext — Saudi VAT return form"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "license.txt" }
version = "0.2.0"

dependencies = [
    "frappe>=15.0.0,<17.0.0",
    "erpnext>=15.0.0,<17.0.0",
]

[project.urls]
Repository = "https://github.com/your-org/ksa_vat_report"
